# pipoli

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
examples/: simple_eval.py  simple_test.py
src/: VI_wrapper.py  pipoli.py
src/pipoli/: core.py  evaluation.py
src/pipoli/sources/: VI_wrapper.py  __init__.py  sb3.py
