[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipoli"
version = "0.0.1dev"
description = 'Dimensional and adimensional policy handling library.'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Francisco Pascoa", email = "francisco.pascoa@usherbrooke.ca" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  numpy,
  gymnasium,
  pyro_udes,
  stable_baselines3,
]

[project.urls]
Documentation = "https://github.com/SherbyRobotics/pipoli#readme"
Issues = "https://github.com/SherbyRobotics/pipoli/issues"
Source = "https://github.com/SherbyRobotics/pipoli"
